# cabrinha

./: 404.html  CONTRIBUTING.html  Cargo.toml  Justfile  README.md  intro.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml  ci.yml  coverage.yml  release.yml  rust-build.yml  rust-docs.yml  rust-lints.yml  rust-tests.yml
book/: README.md  book.toml
book/src/: CONTRIBUTING.md  intro.md
crates/exex/src/: main.rs  validation.rs
crates/ser/: Cargo.toml  README.md
crates/ser/src/: lib.rs
crates/ser/src/driver/: cursor.rs  mod.rs  submitter.rs
crates/ser/src/stages/: batch_processor.rs  channel_builder.rs  frame_queue.rs  l2_retrieval.rs  l2_traversal.rs  mod.rs  transaction_builder.rs
crates/ser/src/traits/: compressor.rs  mod.rs  providers.rs  rollup.rs  stages.rs
crates/ser/src/types/: channel_out.rs  mod.rs  sync.rs  transaction.rs  utils.rs
src/: main.rs  providers.rs
