[workspace]
members = ["crates/*", "bin/*"]
default-members = []
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/cabrinha"
homepage = "https://github.com/refcell/cabrinha"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
# General
anyhow = { version = "1.0.86", default-features = false }
tracing = { version = "0.1.40", default-features = false }
async-trait = "0.1.80"
serde = { version = "1.0.203", features = ["derive"] }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"
