[workspace]
members = ["crates/*", "bin/goat"]
default-members = ["bin/goat"]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/cabrinha"
homepage = "https://github.com/refcell/cabrinha"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
# General
anyhow = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
async-trait = "0.1"
alloy-primitives = "0.2"
alloy-rpc-types = { version = "0.2", features = ["eth"] }
kona-derive = { git = "https://github.com/ethereum-optimism/kona", rev = "ae71b9df103c941c06b0dc5400223c4f13fe5717" }
serde = { version = "1.0", features = ["derive"] }
alloy-consensus = { version = "0.2", default-features = false, features = ["k256"] }
alloy-rlp = { version = "0.2", default-features = false }
alloy-eips = { version = "0.2", default-features = false }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.dev-client]
inherits = "dev"
panic = "abort"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"
