[package]
name = "cab-ser"
description = "A serialization service for the OP Stack"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
