[package]
name = "opser"
description = "A serialization service for the OP Stack"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true 
kona-derive.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true

# `serde` feature dependencies
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = [
  "dep:serde",
  "kona-derive/serde",
  "alloy-primitives/serde",
]
